--- a/profilePage.html
+++ b/profilePage.html
@@ -289,7 +289,7 @@
     <div class="mainStyle__header">
       <div class="header__menu-hamburger_left"><span onclick="openNav()">&#9776; </span></div>
       <div class="header__title_middle">My Awesome Webservices</div>
-      <div><a href="javascript:void(0)" class="header__title_logout" onclick="">logout</a></div>
+      <div><a href="javascript:void(0)" class="header__title_logout" onclick="returnToIndex()">logout</a></div>
     </div>
     <div class="mainStyle__container">
       <div class="column-left">
