--- a/profilePage.html
+++ b/profilePage.html
@@ -7,7 +7,7 @@
   <title>E-services for House Management - main menu properties</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script>
-    if (sessionStorage.getItem('session') !== 'true')
+    if (sessionStorage.getItem('session') == 'null')
       window.history.back();
   </script>
   <script src="scripts/login.js"></script>
