--- a/profilePage.html
+++ b/profilePage.html
@@ -7,8 +7,9 @@
   <title>E-services for House Management - main menu properties</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script>
-    if (sessionStorage.getItem('session') == 'null')
-      window.history.back();
+    //if (sessionStorage.getItem('session') == 'null')
+    //  window.history.back();
+    console.log(sessionStorage.getItem('session'));
   </script>
   <script src="scripts/login.js"></script>
 
