--- a/profilePage.html
+++ b/profilePage.html
@@ -312,7 +312,7 @@
             <div class="menuBar__options-content">
               <a href="profilePage.html">Profile</a>
               <a href="propertiesPage.html">Properties</a>
-              <a href="#" class="menuBar__options-content_visible">Logout</a>
+              <a href="javascript:void(0)" class="menuBar__options-content_visible" onclick="returnToIndex()">Logout</a>
             </div>
           </div>
         </div>
